# fastapi_boilerplate

./: .env.template  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  req.txt
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  auth.py  mock_auth.py  user.py
app/api/v1/: auth.py  mock_auth.py  user.py
app/core/: config.py
app/core/db/: db_helper.py  transactional.py
app/core/dependencies/: auth.py  logging.py
app/core/exceptions/: auth.py  base.py  entity.py  token.py
app/core/middlewares/: sqlalchemy.py
app/core/models/: __init__.py  user.py
app/core/models/mixins/: base.py
app/core/responses/: __init__.py  base.py
app/core/schemas/: auth.py  base.py  token.py
app/core/security/: jwt.py  password.py
app/core/utils/: __init__.py  filter.py  password.py  sort.py  timezone.py  token.py
app/models/: __init__.py  user.py
app/repository/: base.py  user.py
app/schemas/: auth.py  base.py
app/services/: auth.py  base.py  social.py  user.py
tests/: conftest.py
tests/auth/: conftest.py  test_auth.py
