[project]
name = "fastapi-app-template"
version = "0.1.4"
description = "Template for FastAPI project"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.5",
    "httpx>=0.27.2",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.10.0",
    "pytz>=2024.2",
    "sqlalchemy[postgresql-asyncpg]>=2.0.36",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
]
