[project]
name = "fastapi-app-template"
version = "0.1.4"
description = "Template for FastAPI project"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.5",
    "google-auth>=2.36.0",
    "httpx>=0.27.2",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.10.0",
    "pytz>=2024.2",
    "sqlalchemy[postgresql-asyncpg]>=2.0.36",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
